--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Math Quiz Game</title>
+<title>Guess The Word</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -10,12 +10,12 @@
 
 <link rel="stylesheet" type="text/css" href="game.css">
 
-<script src="login.js"></script>
+<script src="game_login.js"></script>
 </head>
 <body>
 
 <center>
-<h1>Math Quiz Game</h1>
+<h1>Game</h1>
 
 <div class="col-lg-4 col-sm-8 col-xs-11 login_div1">
 <h3 >Player 1 Login for the game</h3>
@@ -35,4 +35,4 @@
 </center>
 
 </body>
-</html>\
+</html>
